# bytloop-pos

./: .editorconfig  .gitignore  README.md
backend/: .env.example  alembic.ini  importlinter.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/migrations/versions/: 20260424_0001_initial.py  20260424_0002_phase1.py  20260424_0003_phase2.py  20260424_0004_phase3_verticals.py  20260424_0005_phase4_expansion.py  20260424_0006_audit.py  20260424_0007_procurement.py  20260425_0007_order_customer.py  20260426_0008_vertical_depth.py  20260427_0009_plugins.py  20260428_0010_variant_expansion.py  20260429_0011_profile_variants.py  20260430_0012_ai_analytics.py  20260501_0013_planograms.py  20260501_0014_personalization.py  20260501_0015_supply_chain.py
backend/scripts/: seed.py
backend/src/: main.py
backend/src/core/: cache.py  config.py  correlation.py  db.py  deps.py  errors.py  events.py  idempotency.py  logging.py  permissions.py  real_ip.py  realtime.py  schemas.py  security.py
backend/src/integrations/ai/: base.py  factory.py  groq_adapter.py
backend/src/integrations/email/: base.py  factory.py  mailgun_adapter.py  queued_adapter.py  smtp_adapter.py  templates.py
backend/src/integrations/media/: cloudinary.py
backend/src/integrations/payments/: base.py  bkash_provider.py  cash_provider.py  factory.py  stripe_provider.py  webhooks.py
backend/src/modules/ai/: age_vision_router.py  api.py  assistant_router.py  cafeteria_vision_router.py  catalog_router.py  entity.py  inventory_vision_router.py  jewelry_vision_router.py  ml_utils.py  ops_router.py  planogram_router.py  pricing_router.py  procurement_vision_router.py  risk_router.py  router.py  service.py  supply_chain_router.py  touch_router.py  translate_router.py  vertical_router.py
backend/src/modules/audit/: api.py  entity.py  router.py  schemas.py  service.py
backend/src/modules/catalog/: api.py  entity.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/customers/: api.py  entity.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/discounts/: api.py  entity.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/identity/: api.py  entity.py  oauth.py  oauth_router.py  repository.py  router.py  schemas.py  service.py
backend/src/modules/inventory/: api.py  entity.py  planogram_entity.py  (+4 more)
backend/src/tasks/: ai_analytics_tasks.py  app.py  cannabis_outbound_tasks.py  email_tasks.py  personalization_tasks.py
backend/tests/: conftest.py
backend/tests/core/: test_errors.py  test_idempotency.py
(+699 files in other folders)
